# clawfit

./: CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude/: soul.gen.md
.claude/agents/: ecosystem-mapper.md  registry-curator.md  research-watcher.md  scoring-analyst.md  test-guardian.md
clawfit/: __init__.py  cli.py  diagnose.py  filters.py  loader.py  org_scorer.py  recommend.py  schemas.py  scoring.py  server.py  tui.py
clawfit/data/: tools_registry.json
clawfit/registry/: agents.json  hardware.json  llms.json
data/: feature_matrix.json  feature_matrix.schema.json  org_questions.json  tools_registry.json
docs/: reference-levels.ko.md  reference-levels.md
docs/methodology-signals/: README.md
docs/pages/: README.md  adoption-levels.md  ecosystem-axes.md  ecosystem-overview.md  inference-runtime-axis.md  layers-vs-adoption.md  maturity-layer-map.md
docs/posts/: 2026-03-28-harness-and-voice-midcycle-insights.md  2026-03-28-introducing-clawfit.md  2026-03-28-methodology-is-becoming-a-first-class-axis.md  2026-03-28-oh-my-claudecode-harness-trend.md  2026-03-28-why-clawfit-needs-a-bigger-map-than-code-agent-orchestration.md  README.md
docs/reference-notes/: 2026-03-28-agent-patterns-reference.md  2026-03-28-harness-engineering-visual-reference.md  README.md  ecosystem-layers-diagram.md  evidence-schema.md  hardware-deployment-axis.md  inference-runtime-substrate.md  missing-recommendation-axes.md  ontology-hardening-roadmap.md
docs/research-watch/: 2026-03-28-agent-patterns-education-signal.md  (+205 more)
tests/: test_filters.py  test_recommend.py
(+7 files in other folders)
