[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clawfit"
version = "1.1.1"
description = "AI agent + LLM + hardware recommendation engine"
requires-python = ">=3.7"
license = "MIT"

[project.scripts]
clawfit = "clawfit.cli:main"

[tool.setuptools.packages.find]
include = ["clawfit*"]

[tool.setuptools.package-data]
clawfit = ["registry/*.json", "data/*.json"]
